--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="home">Home</string>
     <string name="category">Category</string>
     <string name="favorite">Favorite</string>
+    <string name="search">Search</string>
 </resources>
